# Django_app

./: Dockerfile  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
mysite/: db.sqlite3  my_git_hub  my_git_hub.pub  shopapp-orders-fixtures.xml
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/management/commands/: create_category.py  create_tags.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_form.html  articles-list.html
mysite/locale/en/LC_MESSAGES/: django.mo  django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  login.html  profile_update_form.html  profiles-list.html  register.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0008_product_created_by.py  0009_product_preview.py  0010_productimage.py  0011_alter_product_options.py  0012_alter_order_options.py  0013_alter_order_created_at_alter_order_delivery_address_and_more.py
mysite/shopapp/templates/shopapp/: base.html  create-product.html  create_order.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  order_update_form.html  product_confirm_delete.html  product_form.html  (+5 more)
