[tool.poetry]
name = "mydjangoapp"
version = "0.1.0"
description = ""
authors = ["Notf8 <notf8@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.0.6"
asgiref = "3.6.0"
attrs = "23.1.0"
certifi = "2023.7.22"
django-debug-toolbar = "4.2.0"
django-filter = "23.2"
djangorestframework = "3.14.0"
drf-spectacular = "0.26.4"
gunicorn = "21.2.0"
inflection = "0.5.1"
jsonschema = "4.18.4"
jsonschema-specifications = "2023.7.1"
packaging = "23.2"
pillow = "10.0.0"
pytz = "2023.3"
rpds-py = "0.9.2"
python-gettext = "5.0"
pyyaml = "6.0.1"
referencing = "0.30.0"
sentry-sdk = "1.31.0"
sqlparse = "0.4.2"
tzdata = "2022.7"
uritemplate = "4.1.1"
urllib3 = "2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
